--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -219,10 +219,8 @@ a>p {
 .extra-input {
 	width: 90%;
 	margin-left: 5%;
-	min-height: 50px;
-	border: solid 1px #E4E4E4 !important;
+	border: solid 1px #E4E4E4;
 	border-radius: 0;
-	padding: 10px;
 }
 
 .class-title {
@@ -230,7 +228,6 @@ a>p {
 	padding-right: 1rem;
 }
 
-.btn-applied {}
 
 .center-popover {
 	position: fixed;
@@ -270,7 +267,7 @@ a>p {
 
 .pop-title {
 	width: 100%;
-	height: 40px;
+	height: 30px;
 	background-color: #F2F3F5;
 	line-height: normal;
 	display: flex;
@@ -280,7 +277,7 @@ a>p {
 
 .title-left {
 	width: 3px;
-	height: 30px;
+	height: 20px;
 	background-color: #1DB8F1;
 }
 
@@ -288,7 +285,7 @@ a>p {
 	width: 50%;
 	padding-left: 5px;
 	flex-grow: 1;
-	font-size: 20px;
+	font-size: 16px;
 	color: #323232;
 }
 
@@ -306,7 +303,7 @@ a>p {
 
 .icon-guanbi1 {
 	color: #D2D2D2;
-	font-size: 24px;
+	font-size: 20px;
 }
 
 .pop-hint {
@@ -362,8 +359,19 @@ a>p {
 	padding-left: 40px;
 }
 .mui-input-row label {
-	padding: 8px 5px;
+	padding: 6px 5px;
 }
 .mui-input-row.mui-radio{
 	width: 32%;
+}
+.mui-input-group .mui-input-row{
+	height: 28px;
+}
+textarea{
+	margin-bottom: 0;
+	padding: 5px 5px;
+	font-size: 14px;
+}
+textarea:-webkit-input-placeholder{
+	font-size: 5px;
 }
