--- a/JiaoBaoYun-hb/css/cloud/order-member.css
+++ b/JiaoBaoYun-hb/css/cloud/order-member.css
@@ -64,9 +64,20 @@
 		-webkit-flex-grow: 1;
 		-ms-flex-grow: 1;
 		flex-grow: 1;
-		display: flex;
+		display: -webkit-box;
 		display: -webkit-flex;
+		display: -moz-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+		-moz-box-align: center;
+		-ms-flex-align: center;
+		-webkit-align-items: center;
 		align-items: center;
+		-webkit-box-pack: space-between;
+		-moz-box-pack: space-between;
+		-ms-flex-pack: space-between;
+		-webkit-justify-content: space-between;
 		justify-content: space-between;
 	}
 	
