--- a/JiaoBaoYun-hb/css/homework/homework-commit.css
+++ b/JiaoBaoYun-hb/css/homework/homework-commit.css
@@ -33,12 +33,11 @@ body,
 
 .comment-item {
 	background-color: #f2f3f5;
-	padding:10px 15px;
-	/*margin:-1rem,0 ;*/
-/*	margin: 0 -15px;*/
+	padding:10px 15px 10px;
 	color: #383838;
 	font-size: 1.3rem;
 	letter-spacing: 1px;
+	margin: 0;
 }
 
 .student-info {
@@ -46,9 +45,6 @@ body,
 	display: -webkit-flex;
 	align-items: center;
 	padding: 0 0 2px;
-}
-h6{
-	margin: 0;
 }
 /*.result-text {
 	min-height: 4rem;
