--- a/JiaoBaoYun-hb/css/show/show.css
+++ b/JiaoBaoYun-hb/css/show/show.css
@@ -76,7 +76,7 @@ body,
 }
 
 .mui-table-view {
-	background: #EFEFF4;
+	background: #f2f3f5;
 	/*背景色透明*/
 }
 
@@ -85,7 +85,7 @@ body,
 	/*cell 背景设为白色*/
 	padding: 0;
 	/*内边距为0*/
-	margin-bottom: 10px;
+	margin-bottom: 8px;
 }
 
 .mui-table-view:before,
@@ -97,7 +97,7 @@ body,
 
 .mui-table-view-cell {
 	background-color: #fff;
-	margin-top: 1rem;
+	/*margin-top: 1rem;*/
 }
 
 .mui-row-padding-8px {
