--- a/JiaoBaoYun-hb/css/utils/MultiMedia.css
+++ b/JiaoBaoYun-hb/css/utils/MultiMedia.css
@@ -65,3 +65,73 @@
 	/*播放视频*/
 	position: absolute;
 }
+
+.multimedia-audio-area {
+	padding: 5px;
+	line-height: 45px;
+}
+
+.multimedia-audio-triangle {
+	/*三角形*/
+	height: 0px;
+	width: 0px;
+	border: 9px solid #E4E4E4;
+	border-color: transparent #E4E4E4 transparent transparent;
+}
+
+.multimedia-audio-triangle-out {
+	/*外面的三角形*/
+	position: absolute;
+	top: 10px;
+	left: -19px;
+}
+
+.multimedia-audio-triangle-in {
+	/*里面的三角形*/
+	position: absolute;
+	top: 10px;
+	left: -18px;
+	border-color: transparent white transparent transparent;
+}
+
+.multimedia-audio-button {
+	/*音频主体*/
+	padding: 0px;
+	height: 45px;
+	margin-left: 10px;
+	border-color: #E4E4E4;
+}
+
+.multimedia-audio-time {
+	/*音频时间*/
+	position: absolute;
+	color: #808080;
+	right: 5px;
+	top: 0px;
+	line-height: 45px;
+}
+
+.multimedia-audio-icon {
+	/*音频图标*/
+	color: #808080;
+	position: absolute;
+	font-size: 30px !important;
+	top: 0px;
+	left: 0px;
+	line-height: 45px;
+}
+
+.multimedia-audio-icon-closeempty {
+	/*音频删除图标*/
+	color: white;
+	background-color: #1DB8F1;
+	border-radius: 50%;
+	font-size: 20px;
+	margin-left: 20px;
+}
+
+.mui-btn-grey.mui-active:enabled,
+.mui-btn-grey:enabled:active {
+	background-color: white;
+	border-color: #E4E4E4;
+}
