--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
@@ -4,6 +4,8 @@
 	width: 4rem;
 	height: 4rem;
 	border-radius: 50%;
+	vertical-align: middle;
+	margin-right: 5px;
 }
 
 
@@ -226,6 +228,7 @@
 	display: flex;
 	display: -webkit-flex;
 	align-items: center;
+	
 }
 
 .img-container {
@@ -264,6 +267,7 @@
 	color: #323232;
 	padding-left: 5px;
 	font-size: 1.5rem;
+	flex-grow: 1;
 }
 
 .mui-popover {
@@ -287,5 +291,5 @@
 	color: #B7B7B7;
 }
 .comments-content{
-	padding-left: 4rem;
+	/*padding-left: 4rem;*/
 }
