调整音频图标，增加安卓音频显示

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -261,6 +261,8 @@
 
 .icon-banxiabiao:before { content: "\e638"; }
 
+.icon-yuyin4:before { content: "\e678"; }
+
 .icon-shanchu2:before { content: "\e647"; }
 
 .icon-zhifubao:before { content: "\e677"; }
