--- a/JiaoBaoYun-hb/css/utils/MultiMedia.css
+++ b/JiaoBaoYun-hb/css/utils/MultiMedia.css
@@ -82,14 +82,14 @@
 .multimedia-audio-triangle-out {
 	/*外面的三角形*/
 	position: absolute;
-	top: 10px;
+	top: 12px;
 	left: -19px;
 }
 
 .multimedia-audio-triangle-in {
 	/*里面的三角形*/
 	position: absolute;
-	top: 10px;
+	top: 12px;
 	left: -18px;
 	border-color: transparent white transparent transparent;
 }
@@ -115,10 +115,12 @@
 	/*音频图标*/
 	color: #808080;
 	position: absolute;
-	font-size: 30px !important;
+	font-size: 20px !important;
 	top: 0px;
 	left: 0px;
-	line-height: 45px;
+	line-height: 40px;
+	margin-top: 3px;
+	margin-left: 10px;
 }
 
 .multimedia-audio-icon-closeempty {
