--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -247,8 +247,8 @@ h6 {
 }*/
 
 header>a {
-	padding-top: 1.2rem;
-	font-size: 1.5rem;
+	padding-top: 12px;
+	font-size: 14px;
 }
 
 .post-icon:last-of-type {
