--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -1,14 +1,18 @@
 
- @font-face {font-family: "iconfont";
-  src:url('../../fonts/iconfont.ttf') format('truetype'); /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+@font-face {font-family: "iconfont";
+  src: url('iconfont.eot?t=1494404088367'); /* IE9*/
+  src: url('iconfont.eot?t=1494404088367#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1494404088367') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1494404088367') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1494404088367#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
-	font-family:"iconfont" !important;
-	font-size:16px;
-	font-style:normal;
-	-webkit-font-smoothing: antialiased;
-	-webkit-text-stroke-width: 0.2px;
+  font-family:"iconfont" !important;
+  font-size:16px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-bianji:before { content: "\3486"; }
@@ -259,6 +263,12 @@
 
 .icon-banxiabiao:before { content: "\e638"; }
 
+.icon-shangchuanyunduan:before { content: "\e63e"; }
+
+.icon-dongtai:before { content: "\e63f"; }
+
+.icon-wenda2:before { content: "\e640"; }
+
 .icon-yuyin4:before { content: "\e678"; }
 
 .icon-shanchu2:before { content: "\e647"; }
@@ -266,6 +276,8 @@
 .icon-iconhexinhuiyuan:before { content: "\e679"; }
 
 .icon-zhifubao:before { content: "\e677"; }
+
+.icon-jiaoyu1:before { content: "\e642"; }
 
 .icon-shipin2:before { content: "\e65e1"; }
 
