--- a/JiaoBaoYun-hb/css/qiuzhi/attention-persons.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/attention-persons.css
@@ -1,28 +1,37 @@
 /*头像样式*/
-.head-img,.head-portrait{
+
+.head-img,
+.head-portrait {
 	width: 4rem;
 	height: 4rem;
 	border-radius: 50%;
 	/*max-width: 20%;*/
 }
-.head-img{
+
+.head-img {
 	max-width: 15%;
 }
 
 .mui-scroll-wrapper {
 	padding-top: 44px;
 }
+
+
 /**
  * 中间信息宽度
  */
-.info-container{
+
+.info-container {
 	max-width: 60%;
 	padding: .5rem 0 0 .5rem;
 }
-.person-info{
+
+.person-info {
 	line-height: 120%;
 }
-.attentioned-btn,.attention-btn{
+
+.attentioned-btn,
+.attention-btn {
 	max-width: 25%;
 	height: 32px;
 	float: right;
@@ -32,34 +41,49 @@
 	/*background-color: #1db8F1;*/
 }
 
+
 /*需关注button*/
-.attention-btn{
+
+.attention-btn {
 	color: #fff;
 	border: 1px solid #1db8F1;
 }
+
+
 /*已关注的显示*/
-.attentioned-btn{
+
+.attentioned-btn {
 	color: #E4E4E4;
 	border: 1px solid #E4E4E4;
 }
+
+
 /*.mui-table-view-cell:last-of-type{
 	padding-right: .5rem;
 }*/
-.li-container{
+
+.li-container {
 	height: 6rem;
 	/*text-align: center;*/
 }
+
+
 /*外边框+关注内buttton字体颜色*/
-.mui-btn-outlined.attention-btn{
+
+.mui-btn-outlined.attention-btn {
 	color: #1db8F1;
 }
+
+
 /*点击后的颜色*/
-.attention-btn:enabled:active{
+
+.attention-btn:enabled:active {
 	color: white;
 	border: 1px solid #1db8F1;
 	background-color: #1db8F1;
 }
-.mui-btn-outlined{
+
+.mui-btn-outlined {
 	/*min-width: 20%;*/
 	width: 70px;
 }
@@ -139,11 +163,19 @@
 .mui-pull-top-canvas canvas {
 	width: 40px;
 }
-.person-name{
+
+.person-name {
 	color: #323232;
 	font-size: 15px;
 }
-.intro-info{
+
+.intro-info {
 	color: #808080;
 	font-size: 13px;
+}
+
+.noOneDisplay {
+	background: url(../../image/mine/invite_none_0.png) no-repeat;
+	background-size: 50%;
+	background-position: center;
 }
