--- a/JiaoBaoYun-hb/css/micro-course/course-list.css
+++ b/JiaoBaoYun-hb/css/micro-course/course-list.css
@@ -33,6 +33,7 @@
 .courseName-button {
 	display: flex;
 	display: -webkit-flex;
+	padding-bottom: 15px;
 }
 
 
@@ -43,6 +44,8 @@
 .coursre-name {
 	width: 50%;
 	flex-grow: 1;
+	font-size: 20px;
+	color: #323232;
 }
 
 
@@ -51,8 +54,8 @@
  */
 
 .input-btn {
-	width: 40px;
-	height: 20px;
+	width: 70px;
+	height: 30px;
 }
 
 
