--- a/JiaoBaoYun-hb/css/show/show.css
+++ b/JiaoBaoYun-hb/css/show/show.css
@@ -13,8 +13,8 @@
 	min-width: 7rem;
 	max-width: 25%;*/
 	text-align: center;
-	width: 55px;
-	height: 28px;
+	width: 50px;
+	height: 20px;
 	border: 0;
 	padding: 0;
 	color: white;
@@ -27,12 +27,13 @@
 	min-width: 7rem;
 	max-width: 25%;*/
 	text-align: center;
-	width: 55px;
-	height: 28px;
+	width: 50px;
+	height: 20px;
 	border: 0;
 	padding: 0;
 	color: white;
 	background-color: #b7b7b7;
+	margin-top:10px;
 }
 
 .ellipsis-show {
