--- a/JiaoBaoYun-hb/css/show/show-list.css
+++ b/JiaoBaoYun-hb/css/show/show-list.css
@@ -11,6 +11,7 @@
 .news-container:first-child .news-img{
 	width: 100%;
 	height: 168px;
+	margin-bottom: -6px;
 }
 .news-container:first-child .news-words{
 	padding: 10px;
