--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -224,6 +224,17 @@ h6 {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+.double-line{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	/*white-space: nowrap;*/
+	display: -webkit-box;
+	/*设置弹性盒模型*/
+	-webkit-line-clamp:2;
+	/*文本占的行数,如果要设置2行加...则设置为2*/
+	-webkit-box-orient: vertical;
+	/*子代元素垂直显示*/
+}
 
 .triple-line {
 	overflow: hidden;
