--- a/JiaoBaoYun-hb/css/show/show-list.css
+++ b/JiaoBaoYun-hb/css/show/show-list.css
@@ -11,11 +11,23 @@
 .news-container:first-child .news-img{
 	width: 100%;
 	height: 168px;
-	margin-bottom: -6px;
+}
+.news-container:first-child .news-img .play-video{
+	width: 50px;
+	height: 50px;
+	margin-top: 49px;
+}
+.news-container:not(:first-child) .news-img .play-video{
+	width: 20px;
+	height: 20px;
+	margin-top: 15px;
 }
 .news-container:first-child .news-words{
-	display: flex;
+	display: -webkit-box;
 	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 10px;
@@ -41,8 +53,11 @@
 	font-size: 15px;
 }
 .news-container:not(:first-child){
-	display: flex;
+	display: -webkit-box;
 	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
 	flex-direction: row-reverse;
 }
 .news-container:not(:first-child) .news-img{
@@ -53,8 +68,11 @@
 	width: 50%;
 	flex-grow: 1;
 	padding-right: 15px;
-	display: flex;
+	display: -webkit-box;
 	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
@@ -72,8 +90,11 @@
 }
 
 .anthor-date{
-	display: flex;
+	display: -webkit-box;
 	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
 }
 .news-anthor{
 	width: 50%;
