调整课程节次详情样式和图标

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -34,6 +34,8 @@
 
 .icon-kangfuzuoye:before { content: "\e654"; }
 
+.icon-person:before { content: "\e674"; }
+
 .icon-trash:before { content: "\e620"; }
 
 .icon-fenxiang:before { content: "\e600"; }
