调整图标，增加文章直接显示描述

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -82,6 +82,8 @@
 
 .icon-zanzan1:before { content: "\e602"; }
 
+.icon-gerenziliao:before { content: "\e67a"; }
+
 .icon-tianjia:before { content: "\e7f7"; }
 
 .icon-ruqun:before { content: "\e66e"; }
