--- a/JiaoBaoYun-hb/css/show/show-list.css
+++ b/JiaoBaoYun-hb/css/show/show-list.css
@@ -33,8 +33,16 @@
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-direction: normal;
+	-webkit-box-orient: vertical;
+	-moz-box-direction: normal;
+	-moz-box-orient: vertical;
+	-webkit-flex-direction: column;
 	flex-direction: column;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	-font-box-pack: justify;
+	-ms-flex-pack: justify;
+	-webkit-justify-content: space-between;
 	padding: 10px;
 	background-color: #000000;
 	position: absolute;
@@ -80,13 +88,26 @@
 .news-container:not(:first-child) .news-words {
 	width: 50%;
 	flex-grow: 1;
+	-webkit-box-flex: 1;
+	-moz-box-flex: 1;
+	-webkit-flex-grow: 1;
+	-ms-flex: 1;
 	padding-right: 15px;
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-direction: normal;
+	-webkit-box-orient: vertical;
+	-moz-box-direction: normal;
+	-moz-box-orient: vertical;
+	-webkit-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: justify;
+	-font-box-pack: justify;
+	-ms-flex-pack: justify;
+	-webkit-justify-content: space-between;
 	justify-content: space-between;
 }
 
@@ -116,6 +137,10 @@
 .news-anthor {
 	width: 50%;
 	flex-grow: 1;
+	-webkit-box-flex: 1;
+	-moz-box-flex: 1;
+	-webkit-flex-grow: 1;
+	-ms-flex: 1;
 }
 
 .news-date {}
