--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -224,13 +224,14 @@ h6 {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
-.double-line{
+
+.double-line {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	/*white-space: nowrap;*/
 	display: -webkit-box;
 	/*设置弹性盒模型*/
-	-webkit-line-clamp:2;
+	-webkit-line-clamp: 2;
 	/*文本占的行数,如果要设置2行加...则设置为2*/
 	-webkit-box-orient: vertical;
 	/*子代元素垂直显示*/
@@ -332,4 +333,29 @@ header>a {
 .input-footerContainer .send-icon {
 	width: 18%;
 	text-align: center;
+}
+
+.video-thumb {
+	/*视频缩略图*/
+	width: 50%;
+	visibility: hidden;
+}
+
+.video-play {
+	/*播放按钮*/
+	position: absolute;
+	visibility: hidden;
+}
+
+.mui-popover {
+	width: 100%;
+	height: 0px;
+	border-radius: initial;
+	background-color: transparent;
+	border: none;
+	box-shadow: none;
+}
+
+.mui-backdrop {
+	background-color: transparent;
 }
