选择文件列表样式和删除逻辑修改

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -16,6 +16,8 @@
 }
 .icon-bianji:before { content: "\3486"; }
 
+.icon-shanchu:before { content: "\e622"; }
+
 .icon-close:before { content: "\e646"; }
 
 .icon-zone:before { content: "\e64c"; }
