班级空间中文内容字体改成“方正兰亭黑简体”

--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -22,6 +22,15 @@ h1:last-of-type {
 	color: white;
 }
 
+@font-face {
+	font-family: fangzheng;
+	src: url(../../fonts/fangzheng.ttf) format('truetype');
+}
+
+.mui-content {
+	font-family: fangzheng;
+}
+
 
 /**
  * 班级空间icon样式
