0006175: 班级空间中图片大小修改

--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -30,7 +30,9 @@ h1:last-of-type {
 .mui-content {
 	font-family: fangzheng;
 }
-
+.display-inlineBlock {
+	display: inline-block;
+}
 
 /**
  * 班级空间icon样式
