--- a/JiaoBaoYun-hb/css/show/show.css
+++ b/JiaoBaoYun-hb/css/show/show.css
@@ -146,7 +146,7 @@ body,
 
 .dynamic-contenttext {
 	/*动态内容*/
-	font-family: '微软雅黑 Regular', '微软雅黑';
+	/*font-family: '微软雅黑 Regular', '微软雅黑';*/
 	/*字体样式*/
 }
 
