--- a/JiaoBaoYun-hb/css/show/show-list.css
+++ b/JiaoBaoYun-hb/css/show/show-list.css
@@ -56,7 +56,7 @@
 .news-container:first-child .news-words .news-anthor,
 .news-container:first-child .news-words .news-date,
 .news-container:first-child .news-words .news-title {
-	color: #FFFFFF;
+	color: rgba(255,255,255,1.0);
 	opacity: 1.0;
 }
 
