--- a/JiaoBaoYun-hb/css/show/show-detail.css
+++ b/JiaoBaoYun-hb/css/show/show-detail.css
@@ -1,11 +1,12 @@
 body{
 	background-color: white;
 }
-.mui-content{
+.mui-bar-nav~.mui-content{
 	background-color: white;
-	padding: 12px 15px;
+	padding: 56px 15px 12px;
 }
 .detail-head{
+	line-height: 24px;
 	width: 100%;
 	text-align: center;
 }
