展现详情样式

--- a/JiaoBaoYun-hb/css/show/show-detail.css
+++ b/JiaoBaoYun-hb/css/show/show-detail.css
@@ -132,3 +132,9 @@ body{
 .liker-name{
 	color: #12B7F5;
 }
+.flexStyle{
+	display: flex;
+	display: -webkit-flex;
+	align-items: center;
+	justify-content: center;
+}
