视频显示遮罩

--- a/JiaoBaoYun-hb/css/show/show-detail.css
+++ b/JiaoBaoYun-hb/css/show/show-detail.css
@@ -138,3 +138,6 @@ body{
 	align-items: center;
 	justify-content: center;
 }
+.video-background{
+	background: linear-gradient(to bottom,rgba(0,0,0,0.4),rgba(0,0,0,0) 20%,rgba(0,0,0,0) 80%,rgba(0,0,0,0.4));
+}
