增加删除动态功能，修改删除和回复逻辑

--- a/JiaoBaoYun-hb/css/show/show-detail.css
+++ b/JiaoBaoYun-hb/css/show/show-detail.css
@@ -43,10 +43,12 @@ body{
 	width: 70px;
 }
 .btn-unfocus{
+	border: none;
 	background-color: #12B7F5;
 	color: white;
 }
 .btn-focused{
+	border: none;
 	background-color: gray;
 	color: white;
 }
