展现详情 个边手机适配
引用vue的发布版本

--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -578,3 +578,11 @@ div>.icon-xiangce:before,
 	position: absolute;
 	visibility: hidden;
 }
+.video-container{
+	position: relative;
+}
+.video-duration{
+	position: absolute;
+	right: 5px;
+	bottom: 0;
+}
