--- a/JiaoBaoYun-hb/css/show/show-detail.css
+++ b/JiaoBaoYun-hb/css/show/show-detail.css
@@ -6,7 +6,11 @@ body{
 	padding: 56px 15px 12px;
 }
 .detail-head{
-	line-height: 30px;
+	margin: 10px 0;
+	font-size: 22px;
+	font-weight: 200;
+	letter-spacing: 1px;
+	line-height: 34px;
 	width: 100%;
 	text-align: center;
 }
@@ -55,17 +59,17 @@ body{
 	background-color: gray;
 	color: white;
 }
-.show-content{
-	padding-top: 8px;
-}
 .comments-container{
 }
 .comments-li{
 	padding: 11px 0 0;
 }
 .show-content{
+	padding-top: 8px;
 	color: #808080;
 	font-size: 15px;
+	letter-spacing: 1px;
+	line-height: 26px;
 	word-spacing: 28px;
 	word-break: break-word;
 	word-wrap: break-word;
