--- a/JiaoBaoYun-hb/css/show/show-detail.css
+++ b/JiaoBaoYun-hb/css/show/show-detail.css
@@ -66,7 +66,7 @@ body{
 }
 .show-content{
 	padding-top: 8px;
-	color: #808080;
+	color: #3E3E3E;
 	font-size: 15px;
 	letter-spacing: 1px;
 	line-height: 26px;
