--- a/JiaoBaoYun-hb/css/show/show-list.css
+++ b/JiaoBaoYun-hb/css/show/show-list.css
@@ -38,6 +38,7 @@
 	-webkit-box-pack: justify;
 	-font-box-pack: justify;
 	-webkit-justify-content: space-between;
+	justify-content: space-between;
 	padding: 10px;
 	background-color: rgba(0,0,0,0.7);
 	position: absolute;
