--- a/JiaoBaoYun-hb/css/show/show-detail.css
+++ b/JiaoBaoYun-hb/css/show/show-detail.css
@@ -26,6 +26,8 @@ body{
 	width: 50%;
 	height:4rem;
 	flex-grow: 1;
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
 	padding: 0 10px;
 	display: -webkit-box;
 	display: -webkit-flex;
