--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -335,3 +335,36 @@ header>a {
 	text-align: center;
 }
 
+.right-in {
+	animation-duration: 0.3s;
+	animation-name: sliderightin;
+	animation-timing-function: ease-in;
+}
+
+.left-in {
+	animation-duration: 0.3s;
+	animation-name: sliderleftin;
+	animation-timing-function: ease-in;
+}
+
+@keyframes sliderleftin {
+	from {
+		margin-left: -100%;
+		width: 100%;
+	}
+	to {
+		margin-left: 0%;
+		width: 100%;
+	}
+}
+
+@keyframes sliderightin {
+	from {
+		margin-left: 100%;
+		width: 100%;
+	}
+	to {
+		margin-left: 0%;
+		width: 100%;
+	}
+}
